--- a/style.css
+++ b/style.css
@@ -1,8 +1,31 @@
 body {
 	font-family: Droid Sans;
 	background-color: #ffffff;
-	white-space: nowrap;
 	margin: 0;
+	background-image: url('Background.png');
+	background-repeat: repeat;
+}
+
+footer {
+  text-align: center;
+  padding: 3px;
+  background-color: #242424;
+  color: #ffffff;
+  position: fixed;
+  right: 0;
+  left: 0;
+  bottom: 0;
+}
+
+hr {
+	margin: 20px 20px;
+}
+
+.infobox {
+	margin: 0px 20px;
+	padding: 20px;
+	background-color: white;
+	box-shadow: 5px 10px 18px #888888;
 }
 
 .navbar {
@@ -24,9 +47,18 @@ body {
 	font-size: 16px;
 }
 
-.navbar a:hover, .dropdown-content a:hover, .dropdown:hover .dropbtn, .dropbtn:focus {
+.navbar a:hover{
 	background-color: #ffffff;
 	color: #242424;
+}
+
+.navbar a.active {
+	background-color: #ffffff;
+	color: #242424;
+}
+
+.navbar .icon {
+	display: none;
 }
 
 .dropdown {
@@ -35,22 +67,21 @@ body {
 }
 
 .dropdown .dropbtn {
-	cursor: pointer;
-	font-size: 16px;
-	height: 68px;
-	line-height: 48px;
-	border: none;
-	outline: none;
-	color: white;
-	padding: 10px 10px;
-	background-color: inherit;
-	font-family: inherit;
+  font-size: 16px;    
+  border: none;
+  outline: none;
+  color: white;
+  padding: 10px 10px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
 }
 
 .dropdown-content {
   display: none;
   position: absolute;
   background-color: #242424;
+  min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
@@ -58,22 +89,32 @@ body {
 .dropdown-content a {
   float: none;
   color: #ffffff;
-  padding: 12px 16px;
+  padding: 10px 10px;
   text-decoration: none;
   display: block;
   text-align: left;
 }
 
+.navbar .icon:hover, .dropdown:hover .dropbtn {
+	background-color: #000000;
+	filter: invert(1);
+}
+
 .dropdown-content a:hover {
   background-color: #ffffff;
+  color: #242424;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
 
 .show {
   display: block;
 }
 
-@media screen and (max-width: 350px) {
-	.navbar a:not(:first-child) {
+@media screen and (max-width: 600px) {
+	.navbar a:not(:first-child), .dropdown .dropbtn {
 		display: none;
 	}
 	.navbar a.icon {
@@ -82,7 +123,7 @@ body {
 	}
 }
 
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 600px) {
 	.navbar.responsive {
 		position: relative;
 	}
@@ -94,6 +135,17 @@ body {
 	.navbar.responsive a {
 		float: none;
 		display: block;
+		text-align: right;
+	}
+	.navbar.responsive .dropdown {
+		float: none;
+	}
+	.navbar.responsive .dropdown-content {
+		position: relative;
+	}
+	.navbar.responsive .dropdown .dropbtn {
+		display: block;
+		width: 100%;
 		text-align: right;
 	}
 }
