--- a/style.css
+++ b/style.css
@@ -28,6 +28,42 @@ hr {
 	box-shadow: 5px 10px 18px #888888;
 }
 
+.videobox {
+	margin: 10px;
+	padding: 20px;
+	background-color: white;
+	box-shadow: 5px 10px 18px #888888;
+	display: inline-block;
+	vertical-align: top;
+	text-align: left;
+	font-size: 15px;
+	height: 320px;
+	width: 400px;
+}
+
+.videobox a {
+	color: #242424;
+	text-decoration: none;
+}
+
+.videobox a:hover {
+	text-decoration: underline;
+}
+
+#videoframe {
+	height: 250px;
+	width: 400px;
+}
+
+h2 a {
+	color: #242424;
+	text-decoration: none;
+}
+
+h2 a:hover {
+	text-decoration: underline;
+}
+
 .navbar {
 	background-color: #242424;
 	position: fixed;
@@ -95,7 +131,7 @@ hr {
   text-align: left;
 }
 
-.navbar .icon:hover, .dropdown:hover .dropbtn {
+.dropdown:hover .dropbtn {
 	background-color: #000000;
 	filter: invert(1);
 }
@@ -113,7 +149,7 @@ hr {
   display: block;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
 	.navbar a:not(:first-child), .dropdown .dropbtn {
 		display: none;
 	}
@@ -123,7 +159,7 @@ hr {
 	}
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
 	.navbar.responsive {
 		position: relative;
 	}
